# kor

./: CMakeLists.txt  HACKING  Messages.sh  README  TODO  application.cpp  application.h  config.h.cmake  create_tarball  kor.desktop  korrc  main.cpp  main.h  minicli.cpp  minicli.h  miniclidialog.cpp  miniclidialog.h  miniclidialog.ui  miniclidialogconfig.kcfg  miniclidialogconfig.kcfgc  miniclihandler.cpp  miniclihandler.h  qscopedpointer.h  startupsuspendhandler.cpp  startupsuspendhandler.h  systemtray.patch
cmake/modules/: CheckNetRootInfo2CurrentDesktopForScreen.cmake
desktop/: desktop.cpp  desktop.h  plasmawallpaper.cpp  plasmawallpaper.h  wallpaper.cpp  wallpaper.h
minicli/: minicli.cpp  minicli.h  minicliconfig.kcfg  minicliconfig.kcfgc  miniclidialog.cpp  miniclidialog.h  miniclidialog.ui  miniclihandler.cpp  miniclihandler.h
panels/: applet.cpp  applet.h  helloapplet.cpp  panel.cpp  panel.h  panelwindow.cpp  panelwindow.h  plasmaapplet.cpp  plasmaapplet.h  spacer.cpp  spacer.h
panels/clock/: clock.cpp  clock.h  clockconfig.kcfg  clockconfig.kcfgc
panels/desktopsonscreens/: desktopsonscreens.cpp  desktopsonscreens.h
panels/hello/: hello.cpp  hello.h  helloconfig.kcfg  helloconfig.kcfgc
panels/plasma/: plasma-containment-korinternal.desktop  plasmaapplet.cpp  plasmaapplet.h  plasmaappletconfig.kcfg  plasmaappletconfig.kcfgc  plasmacontainment.cpp  plasmacontainment.h
utils/: x11utils.cpp  x11utils.h
